# CryScan

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/address/: bitcoin_address.cpp  bitcoin_address.h  ethereum_address.cpp  ethereum_address.h  solana_address.cpp  solana_address.h
app/src/main/cpp/bip32/: bip32.cpp  bip32.h
app/src/main/cpp/bip39/: bip39.cpp  bip39.h  wordlist_english.h
app/src/main/cpp/cpp_tests/: CMakeLists.txt  bip32_test.cpp  bip39_test.cpp
app/src/main/cpp/crypto/: hmac.cpp  hmac.h  keccak256.cpp  keccak256.h  ripemd160.cpp  ripemd160.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
app/src/main/cpp/encoding/: base58.cpp  base58.h  bech32.cpp  bech32.h  hex.cpp  hex.h
app/src/main/cpp/jni/: jni_bridge.cpp
app/src/main/java/com/cryptoscanner/: MainActivity.kt  NativeBridge.kt  ScannerViewModel.kt  WalletRepository.kt
app/src/main/java/com/cryptoscanner/model/: LogEntry.kt  ScanConfig.kt  WalletResult.kt
app/src/main/java/com/cryptoscanner/network/: ApiRotator.kt  BitcoinApi.kt  EthereumApi.kt  SolanaApi.kt
app/src/main/java/com/cryptoscanner/storage/: KeystoreManager.kt  WalletDatabase.kt
app/src/main/java/com/cryptoscanner/ui/: ResultsFragment.kt  ScanFragment.kt
app/src/main/java/com/cryptoscanner/ui/adapter/: LogAdapter.kt  WalletAdapter.kt
app/src/main/res/color/: chip_background_selector.xml
app/src/main/res/layout/: activity_main.xml  fragment_results.xml  fragment_scan.xml  item_log.xml  item_wallet.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
gradle/: libs.versions.toml
